# sar_hs_nn

./: .gitignore  AUTHORS  ChangeLog  LICENSE  README.md  pyproject.toml  requirement.txt  requirement_light.txt  setup.cfg  setup.py
sarhspredictor/: __init__.py  config.py  predict_with_quach2020_from_ref_input_using_keras.py
sarhspredictor/examples/: predict_Hs_using_quach2020_model_from_S1_WV_OCN_files.ipynb  s1a-wv2-ocn-vv-20210201t083307-20210201t083310-036394-044589-004.nc
sarhspredictor/lib/: add_bathymetry_from_GEBCO.py  add_swh_era05_cerbere_adapt.py  comp_xspec_on_5_sub_domains.py  compute_CWAVE_params.py  compute_CWAVE_params_from_cart_Xspectra.py  generate_cci_sea_state_daily_nc_file.py  generate_cci_sea_state_orbit_nc_file.py  load_quach_2020_keras_model.py  normalization_inputs_exp1.pbs  normalization_inputs_exp1.py  normalization_inputs_exp1_prun_call.py  normalization_inputs_exp1v4.py  normalization_inputs_exp1v4_nc_outputs.py  normalization_inputs_exp2.py  pol_cart_trans_jstopa_transcoding_furniture_cls.py  predict_hs_from_SLC.py  predict_hs_from_training_dataset.py  predict_with_quach2020_on_OCN_using_keras.py  preproc_ocn_wv.py  read_era05_meteo_params.py  reference_oswk.py
sarhspredictor/lib/sarhs/: generator.py  generator_D1v4.py  preprocess.py
