[project]
name = "sarhspredictor"
requires-python = ">= 3.8"
description = "Python library to predict significant wave height from SAR images"
readme.file = "README.md"
readme.content-type = "text/markdown"
license = {text = "MIT"}
keywords = ["SAR", "sea-state", "reseach", "neural-network","tensorflow"]
authors = [
  {name = "Antoine Grouazel"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xarray",
    "scipy",
    "netCDF4",
    "pandas",
    "numpy",
    "h5py",
    "importlib_resources",
    'tqdm'
]

dynamic = ["version"]

[project.optional-dependencies]
prediction = ["tensorflow","keras"]


[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sarhspredictor"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "sarhspredictor"

[project.scripts]