[metadata]
name = sarhspredictor
author = Antoine Grouazel
author-email = antoine.grouazel@ifremer.fr
summary = SAR Hs NN
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://launchpad.net/pbr
project_urls =
    Bug Tracker =
    Documentation =
    Source Code = https://github.com/grouny/sar_hs_nn
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Scientist
    Intended Audience :: Ocean Physical analysis
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    SAR
    Hs
    altimeter
    ocean

[files]
packages =
    pbr
data_files =

[entry_points]
